# fastapi-turkiye

./: .editorconfig  .github-language-analysis.py  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  404.html  README.md  _typos.toml  index.html  mise.toml  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  techstack.md  techstack.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-docs.yml  deploy-docs.yml  docs-deploy.yml  docs-preview.yml  enforcer.yml  gh-pages.yml  pages.yml
blog/: index.html
css/: custom.css
data/: founders.yml  pages_manuel.yml  progress.yml
docs/: glossary.md  guide.md  index.md  motivation.md  pages.md  people.md  progress.md  team.md  translation-notes.md
docs/css/: custom.css
docs/data/: founders.yml  pages-manuel.yml  pages_manuel.yml  progress.yml
docs/includes/: abbreviations.md  refs.md
docs/tutorials/: markdown.md  mkdocs.md
glossary/: index.html
guide/: index.html
includes/abbreviations/: index.html
includes/refs/: index.html
mkdocs/: index.html
motivation/: index.html
pages/: index.html
people/: index.html
progress/: index.html
search/: search_index.json
team/: index.html
translation-notes/: index.html
tutorials/markdown/: index.html
tutorials/mkdocs/: index.html
