[project]
name = "fastapi-turkiye"
version = "0.0.0"
description = "Turkish translation of the FastAPI documentation."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[dependency-groups]
docs = [
  "mkdocs[i18n]>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocs-macros-plugin>=1.5.0",
  "mkdocs-markdownextradata-plugin>=0.2.6",
  "pyyaml>=6.0.3",
]

[tool.uv]
default-groups = ["docs"]
